--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -113,6 +113,7 @@
         <activity android:name=".ui.main.review.event.ReviewEventActivity"
                 android:windowSoftInputMode="adjustResize">
         </activity>
+        <activity android:name=".ui.main.review.main.ReviewMainEventActivity"/>
 
         <activity android:name=".ui.main.myPage.myReview.MyReviewActivity"/>
         <activity android:name=".ui.main.myPage.myReview.MyReviewDetailActivity"/>
