--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,12 +21,6 @@
 
         <!--activity-->
         <activity
-                android:name=".ui.login.loginDialog.LoginDialogActivity"
-                android:screenOrientation="unspecified"
-                android:theme="@style/popupTheme"
-                android:launchMode="singleTop">
-        </activity>
-        <activity
                 android:name=".ui.splash.SplashActivity"
                 android:screenOrientation="portrait">
             <intent-filter>
@@ -77,7 +71,8 @@
         </activity>
         <activity android:name=".ui.signUp.school.SignUpSchoolActivity"
                   android:windowSoftInputMode="adjustResize"/>
-        <activity android:name=".ui.login.LoginActivity">
+        <activity android:name=".ui.login.LoginActivity"
+                android:launchMode="singleTop">
         </activity>
 
         <activity android:name=".ui.main.myPage.career.CareerActivity"/>
