--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,8 @@ android {
         applicationId "com.icoo.ssgsag_android"
         minSdkVersion 23
         targetSdkVersion 28
-        versionCode 48 // application에 adjust environment 바꾸기!
-        versionName "3.2.4.0"
+        versionCode 49 // application에 adjust environment 바꾸기!
+        versionName "3.2.5.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -51,6 +51,9 @@ android {
     testOptions {
         unitTests.returnDefaultValues = true
         unitTests.includeAndroidResources = true
+    }
+    realm {
+        syncEnabled = true
     }
 }
 
