--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,6 +100,7 @@
         <activity android:name=".ui.main.review.event.ReviewEventActivity"
                 android:windowSoftInputMode="adjustResize">
         </activity>
+        <activity android:name=".ui.main.allPosters.category.AllCategoryActivity"/>
 
         <activity android:name=".ui.main.myPage.myReview.MyReviewActivity"/>
         <activity android:name=".ui.main.myPage.myReview.MyReviewDetailActivity"/>
