--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,7 +112,7 @@ dependencies {
     implementation 'androidx.browser:browser:1.0.0'
     //firebase
     implementation 'com.google.firebase:firebase-core:16.0.7'
-    implementation 'com.google.firebase:firebase-messaging:17.4.0'
+    implementation 'com.google.firebase:firebase-messaging:20.0.0'
     apply plugin: 'com.google.gms.google-services'
     //GA
     implementation 'com.google.android.gms:play-services-analytics:16.0.8'
@@ -130,7 +130,8 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1'
     // paging library
-    implementation 'android.arch.paging:runtime:1.0.1'
+    implementation "androidx.paging:paging-runtime:2.1.2"
+    implementation "androidx.paging:paging-rxjava2:2.1.2"
     // photo picker
     implementation 'com.droidninja:filepicker:2.2.1'
     // rolling banner
