캘린더 구조 변경 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -110,6 +110,8 @@
         <activity android:name=".ui.main.ssgSag.todaySwipePoster.TodaySwipePosterActivity"
                 android:windowSoftInputMode="adjustResize"/>
 
+        <activity android:name=".ui.main.calendar.calendarPage.list.CalendarListDeleteActivity"/>
+
         <activity android:name="me.iwf.photopicker.PhotoPickerActivity"
                 android:theme="@style/Theme.AppCompat.NoActionBar"
                 />
