--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'realm-android'
+apply plugin: 'com.google.firebase.crashlytics'
 
 def keystorePropertiesFile = project.rootProject.file("app/keystore.properties")
 def keystoreProperties = new Properties()
@@ -35,7 +36,7 @@ android {
         }
         debug {
             signingConfig signingConfigs.release
-
+            ext.alwaysUpdateBuildId = false
         }
     }
     aaptOptions {
@@ -111,11 +112,10 @@ dependencies {
     implementation 'com.naver.nid:naveridlogin-android-sdk:4.2.5'
     implementation 'androidx.browser:browser:1.0.0'
     //firebase
-    implementation 'com.google.firebase:firebase-core:16.0.7'
-    implementation 'com.google.firebase:firebase-messaging:20.0.0'
-    apply plugin: 'com.google.gms.google-services'
+    implementation 'com.google.firebase:firebase-core:17.4.4'
+    implementation 'com.google.firebase:firebase-messaging:20.2.3'
     //GA
-    implementation 'com.google.android.gms:play-services-analytics:16.0.8'
+    implementation 'com.google.android.gms:play-services-analytics:17.0.0'
     implementation 'com.android.installreferrer:installreferrer:1.0'
     //facebook
     implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
@@ -134,6 +134,10 @@ dependencies {
     implementation "androidx.paging:paging-rxjava2:2.1.2"
     // rolling banner
     implementation 'com.github.pzienowicz:androidx-auto-scroll-view-pager:1.1.0'
+    // crashlytics
+    implementation 'com.google.firebase:firebase-analytics-ktx:17.4.4'
+    implementation 'com.google.firebase:firebase-crashlytics:17.1.1'
+    implementation "com.google.firebase:firebase-crash:16.2.1"
 
 
     //test
