--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,19 +26,18 @@ android {
         applicationId "com.icoo.ssgsag_android"
         minSdkVersion 23
         targetSdkVersion 28
-        versionCode 52 // application에 adjust environment 바꾸기!
-        versionName "3.3.1.0"
+        versionCode 53 // application에 adjust environment 바꾸기!
+        versionName "3.3.2.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             manifestPlaceholders = [crashlyticsCollectionEnabled:"true"]
         }
         debug {
             signingConfig signingConfigs.release
-            ext.alwaysUpdateBuildId = false
             manifestPlaceholders = [crashlyticsCollectionEnabled:"false"]
 
         }
