--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -141,7 +141,7 @@
                 android:value="true"/>
         <meta-data
                 android:name="firebase_crashlytics_collection_enabled"
-                android:value="${crashlyticsCollectionEnabled}" />
+                android:value="${enableCrashReporting}" />
 
         <!--receiver-->
         <receiver
