--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,9 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven {
-            url 'https://maven.fabric.io/public'
-        }
+//        maven {
+//            url 'https://maven.fabric.io/public'
+//        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
@@ -15,7 +15,7 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.3'
         classpath 'io.realm:realm-gradle-plugin:6.0.0'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.2.0'
-//        classpath 'io.fabric.tools:gradle:1.+'
+//        classpath 'io.fabric.tools:gradle:1.31.2'
         classpath ('com.google.firebase:firebase-plugins:1.1.0') {
             exclude group: 'com.google.guava', module: 'guava-jdk5'
         }
@@ -40,9 +40,9 @@ allprojects {
         maven {
             url 'https://s3.amazonaws.com/fabric-artifacts-private/internal-snapshots'
         }
-        maven {
-            url 'https://maven.fabric.io/public'
-        }
+//        maven {
+//            url 'https://maven.fabric.io/public'
+//        }
 
     }
 }
