--- a/app/build.gradle
+++ b/app/build.gradle
@@ -154,6 +154,9 @@ dependencies {
 //    implementation 'com.android.tools.build:gradle:4.0.1'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
+    implementation 'androidx.activity:activity-ktx:1.2.0-alpha02'
+    implementation 'androidx.fragment:fragment-ktx:1.3.0-alpha02'
+
 
     //test
     testImplementation 'org.robolectric:robolectric:4.2.1'
