[SSGSAG-133] 대학교 검색 뷰 제작
n/a

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,7 @@
                 android:launchMode="singleTop">
         </activity>
 
+        <activity android:name=".ui.signUp.searchUniv.SearchUnivActivity"/>
         <activity android:name=".ui.main.myPage.career.CareerActivity"/>
         <activity android:name=".ui.main.myPage.career.careerEdit.CareerEditActivity"/>
         <activity android:name=".ui.main.allPosters.search.SearchActivity"/>
