[SSGSAG-135] 우리 학교 추가 뷰
n/a

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,8 @@
         </activity>
 
         <activity android:name=".ui.signUp.searchUniv.SearchUnivActivity"/>
+        <activity android:name=".ui.signUp.searchUniv.RegisterUnivActivity"
+                android:windowSoftInputMode="adjustResize"/>
         <activity android:name=".ui.main.myPage.career.CareerActivity"/>
         <activity android:name=".ui.main.myPage.career.careerEdit.CareerEditActivity"/>
         <activity android:name=".ui.main.allPosters.search.SearchActivity"/>
