--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -114,13 +114,10 @@
                 android:windowSoftInputMode="adjustResize"/>
 
         <activity android:name=".ui.main.calendar.calendarPage.list.CalendarListDeleteActivity"/>
+        <activity android:name=".ui.main.block.MainBlockActivity"/>
 
-        <activity android:name="me.iwf.photopicker.PhotoPickerActivity"
-                android:theme="@style/Theme.AppCompat.NoActionBar"
-                />
 
-        <activity android:name="me.iwf.photopicker.PhotoPagerActivity"
-                android:theme="@style/Theme.AppCompat.NoActionBar"/>
+
 
         <!--meta data-->
         <meta-data
