--- a/app/build.gradle
+++ b/app/build.gradle
@@ -155,10 +155,15 @@ dependencies {
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
     implementation 'androidx.activity:activity-ktx:1.2.0-alpha02'
-    implementation 'androidx.fragment:fragment-ktx:1.3.0-alpha02'
+    implementation 'androidx.fragment:fragment-ktx:1.3.0-alpha03'
 
     // google ads
     implementation 'com.google.android.gms:play-services-ads:19.3.0'
+
+    // kakao adfit
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "com.google.android.gms:play-services-ads-identifier:17.0.0"
+    implementation "com.kakao.adfit:ads-base:3.0.6"
 
     //test
     testImplementation 'org.robolectric:robolectric:4.2.1'
