--- a/build.gradle
+++ b/build.gradle
@@ -40,9 +40,7 @@ allprojects {
         maven {
             url 'https://s3.amazonaws.com/fabric-artifacts-private/internal-snapshots'
         }
-//        maven {
-//            url 'https://maven.fabric.io/public'
-//        }
+        maven { url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/' }
 
     }
 }
