카카오 애드핏 적용

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             android:roundIcon="@drawable/launcher_roundxxxhdpi"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
-            android:usesCleartextTraffic="true">
+            android:usesCleartextTraffic="true"
+            android:networkSecurityConfig="@xml/network_security_config">
 
         <!--activity-->
         <activity
