[SSGSAG-194] 상담/수다 리스트 화면 - 상단 카테고리 제작 및 연결

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -116,6 +116,8 @@
         <activity android:name=".ui.main.calendar.calendarPage.list.CalendarListDeleteActivity"/>
         <activity android:name=".ui.main.block.MainBlockActivity"/>
 
+        <activity android:name=".ui.main.community.board.CommunityBoardActivity"/>
+
 
 
 
