[SSGSAG-205] 더미데이터 이용해서 databinding
n/a

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -117,6 +117,8 @@
         <activity android:name=".ui.main.block.MainBlockActivity"/>
 
         <activity android:name=".ui.main.community.board.CommunityBoardActivity"/>
+        <activity android:name=".ui.main.community.board.postDetail.BoardPostDetailActivity"
+                android:windowSoftInputMode="adjustResize"/>
 
 
 
