--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -120,6 +120,8 @@
         <activity android:name=".ui.main.community.board.CommunityBoardActivity"/>
         <activity android:name=".ui.main.community.board.postDetail.BoardPostDetailActivity"
                 android:windowSoftInputMode="adjustResize"/>
+        <activity android:name=".ui.main.community.board.postDetail.write.BoardCounselPostWriteActivity"
+            android:windowSoftInputMode="adjustResize"/>
 
 
 
