[SSGSAG-232] 수다 글 작성, 수정
n/a

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -122,6 +122,8 @@
                 android:windowSoftInputMode="adjustResize"/>
         <activity android:name=".ui.main.community.board.postDetail.write.BoardCounselPostWriteActivity"
             android:windowSoftInputMode="adjustResize"/>
+        <activity android:name=".ui.main.community.board.postDetail.write.BoardTalkPostWriteActivity"
+            android:windowSoftInputMode="adjustResize"/>
 
 
 
