--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -133,16 +133,12 @@
         <meta-data
                 android:name="com.facebook.sdk.ApplicationId"
                 android:value="@string/facebook_app_id"/>
-        <meta-data
-                android:name="com.google.firebase.messaging.default_notification_channel_id"
-                android:value="@string/default_notification_channel_id"/>
+<!--        <meta-data-->
+<!--                android:name="com.google.firebase.messaging.default_notification_channel_id"-->
+<!--                android:value="@string/default_notification_channel_id"/>-->
         <meta-data
                 android:name="com.kakao.sdk.AppKey"
                 android:value="@string/kakao_app_key"/>
-        <meta-data android:name="AdBrixRmAppKey"
-                   android:value="@string/adbrix_app_key"/>
-        <meta-data android:name="AdBrixRmSecretKey"
-                   android:value="@string/adbrix_secret_key"/>
 <!--        <meta-data-->
 <!--                android:name="com.google.android.gms.ads.APPLICATION_ID"-->
 <!--                android:value="ca-app-pub-6888357719311971~5202997355"/>-->
