--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.main.subscribe.SubscribeActivity"/>
-        <activity android:name=".ui.main.feed.FeedWebActivity"
+        <activity android:name=".ui.main.community.feed.FeedWebActivity"
                 android:usesCleartextTraffic="true"/>
         <activity android:name=".ui.main.myPage.MyPageActivity"/>
         <activity android:name=".ui.main.myPage.contact.ContactActivity"/>
@@ -85,7 +85,7 @@
                 android:windowSoftInputMode="adjustResize">
         </activity>
         <activity android:name=".ui.main.ssgSag.filter.SsgSagFilterActivity"/>
-        <activity android:name=".ui.main.feed.bookmark.BookmarkedFeedActivity"/>
+        <activity android:name=".ui.main.community.feed.BookmarkedFeedActivity"/>
         <activity android:name=".ui.main.review.club.ReviewDetailActivity"/>
         <activity android:name=".ui.main.review.club.reviews.MoreReviewActivity"/>
         <activity android:name=".ui.main.review.club.registration.ClubManagerCheckActivity"/>
@@ -105,7 +105,6 @@
                 android:windowSoftInputMode="adjustResize">
         </activity>
         <activity android:name=".ui.main.allPosters.category.AllCategoryActivity"/>
-        <activity android:name=".ui.main.feed.category.FeedCategoryActivity"/>
 
         <activity android:name=".ui.main.myPage.myReview.MyReviewActivity"/>
         <activity android:name=".ui.main.myPage.myReview.MyReviewDetailActivity"/>
@@ -125,6 +124,7 @@
         <activity android:name=".ui.main.community.board.postDetail.write.BoardTalkPostWriteActivity"
             android:windowSoftInputMode="adjustResize"/>
         <activity android:name=".ui.main.community.review.CommunityReviewActivity"/>
+        <activity android:name=".ui.main.community.feed.CommunityFeedActivity"/>
 
 
 
