[SSGSAG-414] Release 3.5.0 QA - 키보드 올라오면 내용 입력 영역 줄어드는 문제 해결
n/a

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -119,8 +119,10 @@
         <activity android:name=".ui.main.community.board.CommunityBoardActivity" />
         <activity android:name=".ui.main.community.board.postDetail.BoardPostDetailActivity"
                 android:windowSoftInputMode="adjustResize"/>
-        <activity android:name=".ui.main.community.board.postDetail.write.BoardCounselPostWriteActivity"/>
-        <activity android:name=".ui.main.community.board.postDetail.write.BoardTalkPostWriteActivity"/>
+        <activity android:name=".ui.main.community.board.postDetail.write.BoardCounselPostWriteActivity"
+                android:windowSoftInputMode="adjustResize"/>
+        <activity android:name=".ui.main.community.board.postDetail.write.BoardTalkPostWriteActivity"
+                android:windowSoftInputMode="adjustResize"/>
         <activity android:name=".ui.main.community.review.CommunityReviewActivity"/>
         <activity android:name=".ui.main.community.feed.CommunityFeedActivity"/>
 
